--- a/package.json
+++ b/package.json
@@ -20,6 +20,29 @@
     "angular-aria": "1.4.4",
     "angular-cookies": "1.4.4",
     "angular-material": "0.10.1",
-    "angular-route": "1.4.4"
+    "angular-route": "1.4.4",
+    "babel": "^5.6.14",
+    "babelify": "^6.1.1",
+    "browser-sync": "^2.7.2",
+    "browserify": "^10.2.1",
+    "chai": "^3.0.0",
+    "gulp": "~3.8.1",
+    "gulp-autoprefixer": "1.0.1",
+    "gulp-duration": "0.0.0",
+    "gulp-jade": "~0.9.0",
+    "gulp-replace": "^0.5.3",
+    "gulp-rev": "^4.0.0",
+    "gulp-sourcemaps": "^1.3.0",
+    "gulp-streamify": "0.0.5",
+    "gulp-stylus": "~2.0.0",
+    "gulp-uglify": "~1.0.1",
+    "gulp-util": "~3.0.1",
+    "gulp-watch": "^4.3.4",
+    "jsdom": "^5.6.0",
+    "mocha": "^2.2.5",
+    "node-notifier": "^4.2.1",
+    "rimraf": "^2.3.4",
+    "vinyl-source-stream": "~1.0.0",
+    "watchify": "^3.2.1"
   }
 }
