--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "babelify": "^6.1.1",
     "browser-sync": "^2.7.2",
     "browserify": "^10.2.1",
-    "browserify-shim": "^3.8.10",
     "chai": "^3.0.0",
     "gulp": "~3.8.1",
     "gulp-autoprefixer": "1.0.1",
@@ -45,13 +44,14 @@
     "mocha": "^2.2.5",
     "node-notifier": "^4.2.1",
     "rimraf": "^2.3.4",
+    "stringify": "^3.1.0",
     "vinyl-source-stream": "~1.0.0",
     "watchify": "^3.2.1"
   },
   "browserify": {
     "transform": [
       "babelify",
-      "browserify-shim"
+      "stringify"
     ]
   }
 }
