--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-watch": "^4.3.4",
     "jquery": "^2.1.4",
     "jsdom": "^5.6.0",
+    "jsonld": "^0.3.24",
     "mocha": "^2.2.5",
     "node-notifier": "^4.2.1",
     "rimraf": "^2.3.4",
