add instructions for production build

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Interoperability workbench user interface seed.",
   "scripts": {
     "start": "gulp",
+    "build": "gulp build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
