--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angular-cookies": "1.4.4",
     "angular-material": "0.10.1",
     "angular-route": "1.4.4",
+    "angular-translate": "^2.7.2",
     "babel": "^5.6.14",
     "babelify": "^6.1.1",
     "browser-sync": "^2.7.2",
