--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "angular-animate": "1.4.4",
     "angular-aria": "1.4.4",
     "angular-cookies": "1.4.4",
+    "angular-gettext": "^2.1.0",
     "angular-material": "0.10.1",
     "angular-route": "1.4.4",
-    "angular-translate": "^2.7.2",
     "babel": "^5.6.14",
     "babelify": "^6.1.1",
     "browser-sync": "^2.7.2",
