--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "angular-cookies": "1.4.4",
     "angular-gettext": "^2.1.0",
     "angular-route": "1.4.4",
+    "angular-ui-bootstrap": "^0.13.3",
     "babel": "^5.6.14",
     "babelify": "^6.1.1",
+    "bootstrap": "^3.3.5",
     "browser-sync": "^2.7.2",
     "browserify": "^10.2.1",
     "browserify-ngannotate": "^1.0.1",
