--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel": "^5.6.14",
     "babelify": "^6.1.1",
     "bootstrap": "^3.3.5",
+    "bootstrap-sass": "^3.3.5",
     "browser-sync": "^2.7.2",
     "browserify": "^10.2.1",
     "browserify-ngannotate": "^1.0.1",
@@ -36,9 +37,9 @@
     "gulp-duration": "0.0.0",
     "gulp-replace": "^0.5.3",
     "gulp-rev": "^4.0.0",
+    "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-streamify": "0.0.5",
-    "gulp-stylus": "~2.0.0",
     "gulp-uglify": "~1.0.1",
     "gulp-util": "~3.0.1",
     "gulp-watch": "^4.3.4",
