--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "jsonld": "^0.3.24",
     "mocha": "^2.2.5",
     "node-notifier": "^4.2.1",
+    "proxy-middleware": "^0.13.1",
     "rimraf": "^2.3.4",
     "stringify": "^3.1.0",
+    "url": "^0.11.0",
     "vinyl-source-stream": "~1.0.0",
     "watchify": "^3.2.1"
   },
