--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "browserify-ngannotate": "^1.0.1",
     "chai": "^3.0.0",
     "gulp": "~3.8.1",
+    "gulp-angular-gettext": "^2.1.0",
     "gulp-autoprefixer": "1.0.1",
     "gulp-duration": "0.0.0",
     "gulp-replace": "^0.5.3",
