--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "babel-core": "^5.8.23",
     "babel-eslint": "^4.0.7",
     "eslint": "^1.1.0",
     "eslint-config-airbnb": "0.0.7",
