--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jquery": "^2.1.4",
     "jsdom": "^5.6.0",
     "jsonld": "^0.3.24",
+    "lodash": "^3.10.1",
     "mocha": "^2.2.5",
     "node-notifier": "^4.2.1",
     "proxy-middleware": "^0.13.1",
