--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "rimraf": "^2.3.4",
     "stringify": "^3.1.0",
     "url": "^0.11.0",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "~1.0.0",
     "watchify": "3.4.0"
   },
