update deps for node4

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "babelify": "^6.3.0",
     "bootstrap": "^3.3.5",
     "bootstrap-sass": "^3.3.5",
-    "browser-sync": "^2.7.2",
+    "browser-sync": "2.9.4",
     "browserify": "11.0.1",
     "browserify-ngannotate": "^1.0.1",
     "chai": "^3.0.0",
@@ -45,7 +45,7 @@
     "gulp-watch": "^4.3.4",
     "jquery": "^2.1.4",
     "jsdom": "^5.6.0",
-    "jsonld": "^0.3.24",
+    "jsonld": "0.4.1",
     "lodash": "^3.10.1",
     "mocha": "^2.2.5",
     "node-notifier": "^4.2.1",
