--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lodash": "^3.10.1",
     "mocha": "^2.2.5",
     "node-notifier": "^4.2.1",
+    "optimist": "^0.6.1",
     "proxy-middleware": "^0.13.1",
     "rimraf": "^2.3.4",
     "stringify": "^3.1.0",
