--- a/package.json
+++ b/package.json
@@ -66,9 +66,9 @@
     ]
   },
   "devDependencies": {
-    "babel-eslint": "^4.0.7",
-    "eslint": "^1.1.0",
-    "eslint-config-airbnb": "0.0.8",
-    "eslint-plugin-react": "^3.2.2"
+    "babel-eslint": "4.0.7",
+    "eslint": "1.5.1",
+    "eslint-config-airbnb": "0.0.9",
+    "eslint-plugin-react": "3.2.2"
   }
 }
