--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": "eslint-config-airbnb",
+  "extends": "airbnb/base",
   "rules": {
     "comma-dangle": [2, "never"],
     "no-unused-vars": [2, {
