--- a/package.json
+++ b/package.json
@@ -61,14 +61,18 @@
   "browserify": {
     "transform": [
       "babelify",
-      ["stringify", {"minify": true}],
+      [
+        "stringify",
+        {
+          "minify": true
+        }
+      ],
       "browserify-ngannotate"
     ]
   },
   "devDependencies": {
-    "babel-eslint": "4.0.7",
+    "babel-eslint": "4.1.3",
     "eslint": "1.5.1",
-    "eslint-config-airbnb": "0.0.9",
-    "eslint-plugin-react": "3.2.2"
+    "eslint-config-airbnb": "0.1.0"
   }
 }
