--- a/package.json
+++ b/package.json
@@ -19,43 +19,43 @@
   },
   "homepage": "https://github.com/CSC-IT-Center-for-Science/iow-ui#readme",
   "dependencies": {
-    "angular": "1.4.5",
+    "angular": "1.4.7",
     "angular-gettext": "^2.1.0",
-    "angular-route": "1.4.5",
-    "angular-ui-bootstrap": "^0.13.3",
-    "babel-core": "^5.8.23",
+    "angular-route": "1.4.7",
+    "angular-ui-bootstrap": "0.13.3",
+    "babel-core": "^5.8.25",
     "babelify": "^6.3.0",
     "bootstrap": "^3.3.5",
     "bootstrap-sass": "^3.3.5",
-    "browser-sync": "2.9.4",
-    "browserify": "11.0.1",
+    "browser-sync": "2.9.10",
+    "browserify": "11.2.0",
     "browserify-ngannotate": "^1.0.1",
-    "chai": "^3.0.0",
+    "chai": "^3.3.0",
     "gulp": "~3.9.0",
     "gulp-angular-gettext": "^2.1.0",
-    "gulp-autoprefixer": "1.0.1",
+    "gulp-autoprefixer": "3.0.2",
     "gulp-duration": "0.0.0",
-    "gulp-replace": "^0.5.3",
-    "gulp-rev": "^4.0.0",
+    "gulp-replace": "^0.5.4",
+    "gulp-rev": "^6.0.1",
     "gulp-sass": "^2.0.4",
-    "gulp-sourcemaps": "^1.3.0",
-    "gulp-streamify": "0.0.5",
-    "gulp-uglify": "~1.0.1",
-    "gulp-util": "~3.0.1",
-    "gulp-watch": "^4.3.4",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-streamify": "1.0.2",
+    "gulp-uglify": "~1.4.1",
+    "gulp-util": "~3.0.6",
+    "gulp-watch": "^4.3.5",
     "jquery": "^2.1.4",
-    "jsdom": "^5.6.0",
+    "jsdom": "^6.5.1",
     "jsonld": "0.4.1",
     "lodash": "^3.10.1",
-    "mocha": "^2.2.5",
-    "node-notifier": "^4.2.1",
+    "mocha": "^2.3.3",
+    "node-notifier": "^4.3.1",
     "optimist": "^0.6.1",
-    "proxy-middleware": "^0.13.1",
-    "rimraf": "^2.3.4",
+    "proxy-middleware": "^0.14.0",
+    "rimraf": "^2.4.3",
     "stringify": "^3.1.0",
     "url": "^0.11.0",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "~1.0.0",
+    "vinyl-source-stream": "~1.1.0",
     "watchify": "3.4.0"
   },
   "browserify": {
@@ -72,7 +72,7 @@
   },
   "devDependencies": {
     "babel-eslint": "4.1.3",
-    "eslint": "1.5.1",
+    "eslint": "1.6.0",
     "eslint-config-airbnb": "0.1.0"
   }
 }
