--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "proxy-middleware": "^0.14.0",
     "rimraf": "^2.4.3",
     "stringify": "^3.1.0",
+    "typeahead.js-browserify": "^1.0.7",
     "url": "^0.11.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "~1.1.0",
