--- a/package.json
+++ b/package.json
@@ -21,48 +21,53 @@
   "homepage": "https://github.com/CSC-IT-Center-for-Science/iow-ui#readme",
   "dependencies": {
     "angular": "1.4.7",
-    "angular-gettext": "^2.1.0",
+    "angular-gettext": "^2.1.2",
     "angular-route": "1.4.7",
-    "angular-ui-bootstrap": "0.14.2",
-    "babel-core": "^5.8.25",
-    "babelify": "^6.3.0",
+    "angular-ui-bootstrap": "0.14.3",
+    "babel-core": "^6.0.16",
+    "babelify": "^7.2.0",
     "bootstrap": "^3.3.5",
     "bootstrap-sass": "^3.3.5",
     "browser-sync": "2.9.11",
-    "browserify": "11.2.0",
+    "browserify": "12.0.1",
     "browserify-ngannotate": "^1.0.1",
-    "chai": "^3.3.0",
+    "chai": "^3.4.0",
     "gulp": "~3.9.0",
     "gulp-angular-gettext": "^2.1.0",
-    "gulp-autoprefixer": "3.0.2",
+    "gulp-autoprefixer": "3.1.0",
     "gulp-duration": "0.0.0",
     "gulp-replace": "^0.5.4",
     "gulp-rev": "^6.0.1",
-    "gulp-sass": "^2.0.4",
+    "gulp-sass": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-streamify": "1.0.2",
     "gulp-uglify": "~1.4.2",
-    "gulp-util": "~3.0.6",
+    "gulp-util": "~3.0.7",
     "gulp-watch": "^4.3.5",
     "jquery": "^2.1.4",
-    "jsdom": "^6.5.1",
+    "jsdom": "^7.0.2",
     "jsonld": "0.4.2",
     "lodash": "^3.10.1",
     "mocha": "^2.3.3",
     "node-notifier": "^4.3.1",
     "optimist": "^0.6.1",
-    "proxy-middleware": "^0.14.0",
+    "proxy-middleware": "^0.15.0",
     "rimraf": "^2.4.3",
     "stringify": "^3.1.0",
     "typeahead.js-browserify": "^1.0.7",
     "url": "^0.11.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "~1.1.0",
-    "watchify": "3.4.0"
+    "watchify": "3.6.0"
   },
   "browserify": {
     "transform": [
-      "babelify",
+      [
+        "babelify",
+        {
+          "presets": ["es2015"]
+        }
+      ],
       [
         "stringify",
         {
@@ -74,7 +79,7 @@
   },
   "devDependencies": {
     "babel-eslint": "4.1.3",
-    "eslint": "1.6.0",
+    "eslint": "1.8.0",
     "eslint-config-airbnb": "0.1.0"
   }
 }
