--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular-route": "1.4.7",
     "angular-ui-bootstrap": "0.14.3",
     "babel-core": "^6.0.16",
+    "babel-preset-es2015": "^6.0.15",
     "babelify": "^7.2.0",
     "bootstrap": "^3.3.5",
     "bootstrap-sass": "^3.3.5",
@@ -65,7 +66,9 @@
       [
         "babelify",
         {
-          "presets": ["es2015"]
+          "presets": [
+            "es2015"
+          ]
         }
       ],
       [
