--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
   "extends": "airbnb/base",
   "globals": {
-    "angular": true
+    "angular": true,
+    "jQuery": true
   },
   "rules": {
     "comma-dangle": [2, "never"],
