--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
       "args": "none"
     }],
     "no-use-before-define": 0,
-    "no-else-return": 0
+    "no-else-return": 0,
+    "no-nested-ternary": 0
   }
 }
