--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular-route": "1.4.7",
     "angular-ui-bootstrap": "0.14.3",
     "babel-core": "^6.0.16",
+    "babel-polyfill": "^6.0.16",
     "babel-preset-es2015": "^6.0.15",
     "babelify": "^7.2.0",
     "bootstrap": "^3.3.5",
