--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/CSC-IT-Center-for-Science/iow-ui#readme",
   "dependencies": {
-    "angular": "1.4.7",
+    "angular": "1.5.0-beta.2",
     "angular-gettext": "^2.1.2",
     "angular-route": "1.4.7",
     "angular-ui-bootstrap": "0.14.3",
