--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
     }],
     "no-use-before-define": 0,
     "no-else-return": 0,
-    "no-nested-ternary": 0
+    "no-nested-ternary": 0,
+    "indent": [2, 2, {"SwitchCase": 1}]
   }
 }
