--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "browserify": "12.0.1",
     "browserify-ngannotate": "^1.0.1",
     "chai": "^3.4.0",
+    "checklist-model": "^0.6.0",
     "gulp": "~3.9.0",
     "gulp-angular-gettext": "^2.1.0",
     "gulp-autoprefixer": "3.1.0",
