--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "gulp-watch": "^4.3.5",
     "jointjs": "0.9.5",
     "jquery": "^2.1.4",
+    "jquery-mousewheel": "3.1.13",
     "jsdom": "^7.0.2",
     "jsonld": "0.4.2",
     "lodash": "^3.10.1",
