--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "gulp-util": "~3.0.7",
     "gulp-watch": "^4.3.5",
     "jointjs": "0.9.5",
-    "jquery": "^2.1.4",
+    "jquery": "2.1.1",
     "jquery-mousewheel": "3.1.13",
     "jsdom": "^7.0.2",
     "jsonld": "0.4.2",
