--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "angular-ui-bootstrap": "0.14.3",
     "bootstrap": "^3.3.5",
     "bootstrap-sass": "^3.3.5",
+    "change-case": "2.3.0",
     "core-js": "1.2.6",
     "jointjs": "0.9.5",
     "jquery": "2.1.1",
