--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "angular": "1.5.0-beta.2",
     "angular-gettext": "^2.1.2",
+    "angular-messages": "1.4.8",
     "angular-route": "1.4.7",
     "angular-ui-bootstrap": "0.14.3",
     "bootstrap": "^3.3.5",
