--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jquery-mousewheel": "3.1.13",
     "jsonld": "0.4.2",
     "lodash": "^3.10.1",
+    "moment": "2.10.6",
     "typeahead.js": "^0.11.1"
   },
   "devDependencies": {
