Upgrade to typescript 1.7.5

--- a/package.json
+++ b/package.json
@@ -66,8 +66,8 @@
     "resolve": "^1.1.6",
     "rimraf": "^2.4.3",
     "stringify": "^3.1.0",
-    "tsify": "^0.12.2",
-    "typescript": "1.6.2",
+    "tsify": "0.13.2",
+    "typescript": "1.7.5",
     "url": "^0.11.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "~1.1.0",
