Exclude node_modules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,9 @@
     "removeComments": false,
     "sourceMap": true,
     "module": "commonjs"
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "typing"
+  ]
 }
