Angular IHTTPService partial implementation for node script usage

--- a/package.json
+++ b/package.json
@@ -58,11 +58,14 @@
     "gulp-uglify": "~1.4.2",
     "gulp-util": "~3.0.7",
     "gulp-watch": "^4.3.5",
+    "http-status-to-description": "0.0.1",
     "jsdom": "^7.0.2",
     "mocha": "^2.3.3",
     "node-notifier": "^4.3.1",
     "optimist": "^0.6.1",
     "proxy-middleware": "^0.15.0",
+    "q": "2.0.3",
+    "request": "2.69.0",
     "resolve": "^1.1.6",
     "rimraf": "^2.4.3",
     "stringify": "^3.1.0",
