Migrate from gulp to webpack

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Interoperability workbench user interface seed.",
   "license": "EUPL-1.1",
   "scripts": {
-    "start": "gulp",
-    "build": "gulp build",
-    "postinstall": "node_modules/.bin/typings install",
-    "create-translations": "gulp pot",
+    "start": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.serve-config.js",
+    "build": "node node_modules/webpack/bin/webpack.js --config webpack.build-config.js",
+    "postinstall": "node node_modules/typings/dist/bin/typings.js install",
+    "create-translations": "node node_modules/ts-node/dist/bin/ts-node.js generatePot.ts",
     "example-data": "node node_modules/ts-node/dist/bin/ts-node.js examples/loadExamples.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -29,6 +29,7 @@
     "bootstrap": "^3.3.5",
     "bootstrap-sass": "^3.3.5",
     "change-case": "2.3.0",
+    "checklist-model": "^0.6.0",
     "core-js": "2.1.0",
     "jointjs": "0.9.7",
     "jquery": "2.1.1",
@@ -39,53 +40,34 @@
     "typeahead.js": "^0.11.1"
   },
   "devDependencies": {
-    "browser-sync": "2.9.11",
-    "browserify": "12.0.1",
-    "chai": "^3.4.0",
-    "checklist-model": "^0.6.0",
-    "envify": "3.4.0",
-    "gulp": "~3.9.0",
-    "gulp-angular-gettext": "^2.1.0",
-    "gulp-autoprefixer": "3.1.0",
-    "gulp-duration": "0.0.0",
-    "gulp-if": "^2.0.0",
-    "gulp-ng-annotate": "^1.1.0",
-    "gulp-replace": "^0.5.4",
-    "gulp-rev": "^6.0.1",
-    "gulp-sass": "^2.1.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-streamify": "1.0.2",
-    "gulp-uglify": "~1.4.2",
-    "gulp-util": "~3.0.7",
-    "gulp-watch": "^4.3.5",
+    "angular-gettext-tools": "^2.1.11",
+    "assets-webpack-plugin": "^3.2.0",
+    "awesome-typescript-loader": "^0.15.9",
+    "css-loader": "^0.23.0",
+    "file": "^0.2.2",
+    "file-loader": "^0.8.5",
+    "html-webpack-plugin": "^2.7.2",
     "http-status-to-description": "0.0.1",
-    "jsdom": "^7.0.2",
-    "mocha": "^2.3.3",
-    "node-notifier": "^4.3.1",
+    "imports-loader": "^0.6.5",
+    "json-loader": "^0.5.4",
+    "ng-annotate-loader": "^0.1.0",
+    "node-sass": "^3.4.2",
     "optimist": "^0.6.1",
-    "proxy-middleware": "^0.15.0",
+    "po-loader": "^0.3.1",
+    "po2json": "^0.4.1",
     "q": "2.0.3",
+    "raw-loader": "^0.5.1",
     "request": "2.69.0",
-    "resolve": "^1.1.6",
-    "rimraf": "^2.4.3",
-    "stringify": "^3.1.0",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
     "ts-node": "0.5.5",
-    "tsify": "0.13.2",
-    "typescript": "1.7.5",
+    "tslint": "^3.3.0",
+    "tslint-loader": "^2.1.0",
+    "typescript": "^1.8.0",
     "typings": "^0.6.8",
-    "url": "^0.11.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "~1.1.0",
-    "watchify": "3.6.0"
-  },
-  "browserify": {
-    "transform": [
-      [
-        "stringify",
-        {
-          "minify": true
-        }
-      ]
-    ]
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.13",
+    "webpack-config": "^3.1.0",
+    "webpack-dev-server": "^1.14.1"
   }
 }
