--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "jsonld": "0.4.2",
     "lodash": "^3.10.1",
     "moment": "2.10.6",
-    "typeahead.js": "^0.11.1"
+    "typeahead.js": "^0.11.1",
+    "webcola": "^3.1.3"
   },
   "devDependencies": {
     "angular-gettext-tools": "^2.1.11",
