--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lodash": "^3.10.1",
     "moment": "2.10.6",
     "typeahead.js": "^0.11.1",
+    "uri-js": "^2.1.1",
     "webcola": "^3.1.3"
   },
   "devDependencies": {
