--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jsonld": "0.4.2",
     "lodash": "^3.10.1",
     "moment": "2.10.6",
+    "please-wait": "0.0.5",
     "typeahead.js": "^0.11.1",
     "uri-js": "^2.1.1",
     "webcola": "^3.1.3"
