Enable no implicit returns detection

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "removeComments": false,
     "sourceMap": true,
     "module": "commonjs",
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true
   },
   "exclude": [
     "node_modules",
