--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   },
   "homepage": "https://github.com/CSC-IT-Center-for-Science/iow-ui#readme",
   "dependencies": {
-    "angular": "1.5.0",
+    "angular": "^1.5.5",
     "angular-gettext": "^2.1.2",
-    "angular-messages": "1.4.8",
-    "angular-route": "1.4.7",
+    "angular-messages": "^1.5.5",
+    "angular-route": "^1.5.5",
     "angular-ui-bootstrap": "1.3.1",
     "bootstrap": "^3.3.6",
     "bootstrap-sass": "^3.3.6",
