--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/CSC-IT-Center-for-Science/iow-ui#readme",
   "dependencies": {
     "angular": "^1.5.5",
+    "angular-animate": "^1.5.5",
     "angular-gettext": "^2.1.2",
     "angular-messages": "^1.5.5",
     "angular-route": "^1.5.5",
