--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "change-case": "2.3.0",
     "checklist-model": "^0.6.0",
     "core-js": "2.1.0",
+    "font-awesome": "^4.6.1",
     "jointjs": "0.9.7",
     "jquery": "2.1.1",
     "jquery-mousewheel": "3.1.13",
