--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Interoperability workbench user interface seed.",
   "license": "EUPL-1.1",
   "scripts": {
+    "ts-node": "node node_modules/ts-node/dist/bin/ts-node.js",
     "start": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.serve-config.js",
     "build": "node node_modules/webpack/bin/webpack.js --config webpack.build-config.js",
     "postinstall": "node node_modules/typings/dist/bin.js install",
-    "create-translations": "node node_modules/ts-node/dist/bin/ts-node.js generatePot.ts",
-    "example-data": "node node_modules/ts-node/dist/bin/ts-node.js examples/loadExamples.ts",
+    "create-translations": "ts-node generatePot.ts",
+    "example-data": "ts-node examples/loadExamples.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -71,7 +72,6 @@
     "typings": "^1.1.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.13",
-    "webpack-config": "^3.1.0",
     "webpack-dev-server": "^1.14.1"
   }
 }
