--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "EUPL-1.1",
   "scripts": {
     "ts-node": "node node_modules/ts-node/dist/bin/ts-node.js",
-    "start": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.serve-config.js",
-    "build": "node node_modules/webpack/bin/webpack.js --config webpack.build-config.js",
+    "start": "ts-node node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.serve-config.ts",
+    "build": "ts-node node_modules/webpack/bin/webpack.js --config webpack.build-config.ts",
     "postinstall": "node node_modules/typings/dist/bin.js install",
     "create-translations": "ts-node generatePot.ts",
     "example-data": "ts-node examples/loadExamples.ts",
@@ -72,6 +72,7 @@
     "typings": "^1.1.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.13",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-merge": "^0.14.0"
   }
 }
