--- a/package.json
+++ b/package.json
@@ -22,57 +22,57 @@
   },
   "homepage": "https://github.com/CSC-IT-Center-for-Science/iow-ui#readme",
   "dependencies": {
-    "angular": "^1.5.7",
-    "angular-animate": "^1.5.7",
-    "angular-gettext": "^2.1.2",
-    "angular-messages": "^1.5.7",
-    "angular-route": "^1.5.7",
+    "angular": "1.5.7",
+    "angular-animate": "1.5.7",
+    "angular-gettext": "2.1.2",
+    "angular-messages": "1.5.7",
+    "angular-route": "1.5.7",
     "angular-ui-bootstrap": "1.3.3",
-    "bootstrap": "^3.3.6",
-    "bootstrap-sass": "^3.3.6",
+    "bootstrap": "3.3.6",
+    "bootstrap-sass": "3.3.6",
     "change-case": "3.0.0",
-    "checklist-model": "^0.9.0",
+    "checklist-model": "0.9.0",
     "core-js": "2.4.0",
-    "font-awesome": "^4.6.1",
+    "font-awesome": "4.6.1",
     "jointjs": "0.9.10",
     "jquery": "3.0.0",
     "jquery-mousewheel": "3.1.13",
     "jsonld": "0.4.11",
-    "lodash": "^3.10.1",
+    "lodash": "3.10.1",
     "moment": "2.13.0",
     "please-wait": "0.0.5",
-    "uri-js": "^2.1.1",
-    "webcola": "^3.1.3"
+    "uri-js": "2.1.1",
+    "webcola": "3.1.3"
   },
   "devDependencies": {
-    "angular-gettext-tools": "^2.1.11",
-    "assets-webpack-plugin": "^3.2.0",
-    "awesome-typescript-loader": "^1.0.0",
-    "css-loader": "^0.23.0",
-    "file": "^0.2.2",
-    "file-loader": "^0.8.5",
-    "html-webpack-plugin": "^2.7.2",
+    "angular-gettext-tools": "2.1.11",
+    "assets-webpack-plugin": "3.2.0",
+    "awesome-typescript-loader": "1.0.0",
+    "css-loader": "0.23.0",
+    "file": "0.2.2",
+    "file-loader": "0.8.5",
+    "html-webpack-plugin": "2.7.2",
     "http-status-to-description": "0.0.1",
-    "imports-loader": "^0.6.5",
-    "json-loader": "^0.5.4",
-    "ng-annotate-loader": "^0.1.0",
-    "node-sass": "^3.4.2",
-    "optimist": "^0.6.1",
-    "po-loader": "^0.3.1",
-    "po2json": "^0.4.1",
+    "imports-loader": "0.6.5",
+    "json-loader": "0.5.4",
+    "ng-annotate-loader": "0.1.0",
+    "node-sass": "3.4.2",
+    "optimist": "0.6.1",
+    "po-loader": "0.3.1",
+    "po2json": "0.4.1",
     "q": "2.0.3",
-    "raw-loader": "^0.5.1",
+    "raw-loader": "0.5.1",
     "request": "2.72.0",
-    "sass-loader": "^3.1.2",
-    "style-loader": "^0.13.0",
+    "sass-loader": "3.1.2",
+    "style-loader": "0.13.0",
     "ts-node": "0.9.1",
-    "tslint": "^3.3.0",
-    "tslint-loader": "^2.1.0",
-    "typescript": "^1.8.0",
-    "typings": "^1.2.0",
+    "tslint": "3.3.0",
+    "tslint-loader": "2.1.0",
+    "typescript": "1.8.0",
+    "typings": "1.2.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.13",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-merge": "^0.14.0"
+    "webpack": "1.12.13",
+    "webpack-dev-server": "1.14.1",
+    "webpack-merge": "0.14.0"
   }
 }
