--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Interoperability workbench user interface seed.",
   "license": "EUPL-1.1",
   "scripts": {
-    "ts-node": "node node_modules/ts-node/dist/bin.js'",
-    "start": "ts-node node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.serve-config.ts",
-    "build": "ts-node node_modules/webpack/bin/webpack.js --config webpack.build-config.ts",
+    "ts-node": "node node_modules/ts-node/dist/bin.js",
+    "start": "npm run ts-node -- node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.serve-config.ts",
+    "build": "npm run ts-node -- node_modules/webpack/bin/webpack.js --config webpack.build-config.ts",
     "postinstall": "node node_modules/typings/dist/bin.js install",
-    "create-translations": "ts-node generatePot.ts",
-    "example-data": "ts-node examples/loadExamples.ts",
+    "create-translations": "npm run ts-node -- generatePot.ts",
+    "example-data": "npm run ts-node -- examples/loadExamples.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
