Split main.d.ts as browser.d.ts and node.d.ts
Running typescript from node no longes has global browser types set.

--- a/tsconfig-node.json
+++ b/tsconfig-node.json
@@ -8,8 +8,5 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true
   },
-  "files": [
-    "./src/browser.d.ts",
-    "./src/init.ts"
-  ]
+  "files": []
 }
