--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "raw-loader": "0.5.1",
     "request": "2.72.0",
     "sass-loader": "3.2.0",
+    "strip-sourcemap-loader": "0.0.1",
     "style-loader": "0.13.1",
     "ts-node": "0.9.1",
     "tslint": "3.11.0",
