--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jsonld": "0.4.11",
     "lodash": "4.14.2",
     "moment": "2.13.0",
+    "ngclipboard": "1.1.1",
     "node-uuid": "1.4.7",
     "please-wait": "0.0.5",
     "uri-js": "2.1.1",
