--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "checklist-model": "0.9.0",
     "core-js": "2.4.0",
     "font-awesome": "4.6.3",
-    "jointjs": "0.9.10",
+    "jointjs": "file:./src/vendor/jointjs",
     "jquery": "3.1.0",
     "jquery-mousewheel": "3.1.13",
     "jsonld": "0.4.11",
