--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "types": [
       "angular",
       "angular-animate",
