Enable strictNullChecks analyze
Closes #523

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitThis": true,
+    "strictNullChecks": true,
     "types": [
       "angular",
       "angular-animate",
