Enable new ts2 analyzes to node side

--- a/tsconfig-node.json
+++ b/tsconfig-node.json
@@ -8,6 +8,10 @@
     "module": "commonjs",
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitThis": true,
+    "strictNullChecks": true,
     "types": [
       "node",
       "webpack",
