Sanitize as dependency

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "angular-gettext": "2.3.0",
     "angular-messages": "1.5.7",
     "angular-route": "1.5.7",
+    "angular-sanitize": "1.5.8",
     "angular-ui-bootstrap": "1.3.3",
     "bootstrap-sass": "3.3.7",
     "change-case": "3.0.0",
@@ -56,6 +57,7 @@
     "@types/angular-animate": "1.5.4",
     "@types/angular-gettext": "2.1.29",
     "@types/angular-route": "1.3.1",
+    "@types/angular-sanitize": "1.3.3",
     "@types/angular-ui-bootstrap": "0.13.33",
     "@types/change-case": "0.0.29",
     "@types/jasmine": "2.2.33",
