--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "change-case": "3.0.0",
     "checklist-model": "0.9.0",
     "core-js": "2.4.0",
+    "css.escape": "1.5.1",
     "font-awesome": "4.6.3",
     "jointjs": "1.0.1",
     "jquery": "3.1.0",
