--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "checklist-model": "0.9.0",
     "core-js": "2.4.0",
     "css.escape": "1.5.1",
+    "fast-levenshtein": "2.0.5",
     "font-awesome": "4.6.3",
     "jointjs": "1.0.1",
     "jquery": "3.1.0",
@@ -62,6 +63,7 @@
     "@types/angular-sanitize": "1.3.3",
     "@types/angular-ui-bootstrap": "0.13.33",
     "@types/change-case": "0.0.29",
+    "@types/fast-levenshtein": "0.0.1",
     "@types/jasmine": "2.2.33",
     "@types/jointjs": "file:./types/jointjs",
     "@types/jquery": "1.10.31",
