Programmatically run script through ts-node

--- a/package.json
+++ b/package.json
@@ -4,19 +4,15 @@
   "description": "Interoperability workbench user interface seed.",
   "license": "EUPL-1.1",
   "scripts": {
-    "ts-node": "node node_modules/ts-node/dist/bin.js --project tsconfig-node.json",
-    "start": "npm run ts-node -- node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.serve-config.ts --progress",
-    "build": "npm run ts-node -- node_modules/webpack/bin/webpack.js --config webpack.build-config.ts  --progress",
-    "create-translations": "npm run ts-node -- generatePot.ts",
-    "example-data": "npm run ts-node -- examples/loadExamples.ts",
-    "webdriver-manager": "node node_modules/protractor/bin/webdriver-manager",
-    "protractor": "npm run ts-node -- node_modules/protractor/bin/protractor protractor.conf.ts",
+    "start": "node run-script serve",
+    "build": "node run-script build",
+    "create-translations": "node run-script createTranslations",
+    "example-data": "node run-script loadExamples",
+    "test": "node run-script test",
+    "e2e": "node run-script e2e",
     "pree2e": "npm run webdriver:update -- --standalone",
-    "e2e": "npm run protractor",
-    "e2e:live": "npm run e2e -- --elementExplorer",
-    "webdriver:update": "npm run webdriver-manager -- update",
-    "webdriver:start": "nom run webdriver-manager -- start",
-    "test": "npm run ts-node -- node_modules/karma/bin/karma start karma.conf.ts"
+    "webdriver-manager": "node node_modules/protractor/bin/webdriver-manager",
+    "webdriver:update": "npm run webdriver-manager -- update"
   },
   "repository": {
     "type": "git",
@@ -62,6 +58,7 @@
     "@types/angular-route": "1.3.1",
     "@types/angular-sanitize": "1.3.3",
     "@types/angular-ui-bootstrap": "0.13.33",
+    "@types/chalk": "0.4.31",
     "@types/change-case": "0.0.29",
     "@types/fast-levenshtein": "0.0.1",
     "@types/jasmine": "2.2.33",
@@ -77,10 +74,11 @@
     "@types/selenium-webdriver": "2.44.28",
     "@types/webcola": "file:./types/webcola",
     "@types/webpack": "1.12.33",
-    "@types/webpack-merge": "file:./types/webpack-merge",
+    "@types/webpack-dev-server": "file:./types/webpack-dev-server",
     "angular-gettext-tools": "2.2.2",
     "assets-webpack-plugin": "3.4.0",
     "awesome-typescript-loader": "2.2.4",
+    "chalk": "1.1.3",
     "css-loader": "0.23.1",
     "file": "0.2.2",
     "file-loader": "0.8.5",
@@ -100,6 +98,7 @@
     "phantomjs-prebuilt": "2.1.7",
     "po-loader": "0.3.1",
     "po2json": "0.4.2",
+    "progress-bar-webpack-plugin": "1.9.0",
     "protractor": "4.0.10",
     "q": "2.0.3",
     "raw-loader": "0.5.1",
@@ -107,13 +106,12 @@
     "sass-loader": "3.2.0",
     "strip-sourcemap-loader": "0.0.1",
     "style-loader": "0.13.1",
-    "ts-node": "1.2.3",
+    "ts-node": "1.6.1",
     "tslint": "3.15.1",
     "tslint-loader": "2.1.5",
     "typescript": "2.0.6",
     "url-loader": "0.5.7",
     "webpack": "1.13.1",
-    "webpack-dev-server": "1.14.1",
-    "webpack-merge": "0.14.0"
+    "webpack-dev-server": "1.14.1"
   }
 }
