--- a/package.json
+++ b/package.json
@@ -75,9 +75,10 @@
     "@types/webpack-dev-server": "file:./types/webpack-dev-server",
     "angular-gettext-tools": "2.2.2",
     "assets-webpack-plugin": "3.4.0",
-    "awesome-typescript-loader": "2.2.4",
+    "awesome-typescript-loader": "3.0.0-beta.0",
     "chalk": "1.1.3",
     "css-loader": "0.23.1",
+    "enhanced-resolve": "2.3.0",
     "file": "0.2.2",
     "file-loader": "0.8.5",
     "html-webpack-plugin": "2.21.0",
@@ -109,7 +110,7 @@
     "tslint-loader": "2.1.5",
     "typescript": "2.0.6",
     "url-loader": "0.5.7",
-    "webpack": "1.13.1",
-    "webpack-dev-server": "1.14.1"
+    "webpack": "1.13.3",
+    "webpack-dev-server": "1.16.2"
   }
 }
