--- a/package.json
+++ b/package.json
@@ -73,9 +73,9 @@
     "@types/webcola": "file:./types/webcola",
     "@types/webpack": "1.12.33",
     "@types/webpack-dev-server": "file:./types/webpack-dev-server",
+    "add-asset-html-webpack-plugin": "1.0.2",
     "angular-gettext-tools": "2.2.2",
     "assets-webpack-plugin": "3.4.0",
-    "awesome-typescript-loader": "3.0.0-beta.0",
     "chalk": "1.1.3",
     "css-loader": "0.23.1",
     "enhanced-resolve": "2.3.0",
@@ -105,6 +105,7 @@
     "sass-loader": "3.2.0",
     "strip-sourcemap-loader": "0.0.1",
     "style-loader": "0.13.1",
+    "ts-loader": "1.2.1",
     "ts-node": "1.6.1",
     "tslint": "3.15.1",
     "tslint-loader": "2.1.5",
